# internal/model/payment.go
@@ -13,6 +13,12 @@ const (
 )
 
 const (
+	PaySceneMock       = "mock"
+	PaySceneAlipayPage = "page"
+	PaySceneAlipayWap  = "wap"
+)
+
+const (
 	PaymentStatusPending  = 1 // 待支付
 	PaymentStatusPaid     = 2 // 已支付
 	PaymentStatusClosed   = 3 // 已关闭
@@ -28,6 +34,7 @@ type Payment struct {
 	UserID     int64  `gorm:"not null;index" json:"user_id"`
 	MerchantID int64  `gorm:"not null;index" json:"merchant_id"`
 	PayChannel string `gorm:"type:varchar(32);not null;index" json:"pay_channel"`
+	PayScene   string `gorm:"type:varchar(32);not null;default:'';index" json:"pay_scene"`
 	Status     int    `gorm:"not null;default:1;index" json:"status"`
 	Amount     int64  `gorm:"not null;default:0" json:"amount"`
 
